--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1244,7 +1244,7 @@ text-transform: uppercase;
 .testimonial .overlay{
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgba(223, 200, 200, 0.8);
 	z-index: 1;
 }
 #testimonial-slider{
@@ -1283,14 +1283,14 @@ text-transform: uppercase;
 	color: #ffc000;
 	font-size: 14px;
 }
-/*.testimonial .owl-carousel .owl-item img{	
+.testimonial .owl-carousel .owl-item img{	
 	width: 80px;
 	height: 80px;
 	border-radius: 50%;
 	margin-bottom: 5px;
 	display: inline-block;
 	border: inherit;
-} */
+} 
 
 #testimonial-slider .owl-controls{
 	position: absolute;
