--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1234,18 +1234,17 @@ text-transform: uppercase;
  * ----------------------------------------------------------------------------------------
 */
 .testimonial .white-title h2{
-	color: #131212;
+	color: #fff;
 }
 
 .testimonial{ 
 	position: relative;
 	z-index: 9;
 }
-.testimonial .overlay{.testimonial .white-title h2 {
-
+.testimonial .overlay{
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgba(223, 200, 200, 0.8);
 	z-index: 1;
 }
 #testimonial-slider{
@@ -1291,7 +1290,7 @@ text-transform: uppercase;
 	margin-bottom: 5px;
 	display: inline-block;
 	border: inherit;
-}
+} 
 
 #testimonial-slider .owl-controls{
 	position: absolute;
