--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1244,7 +1244,7 @@ text-transform: uppercase;
 .testimonial .overlay{
 	width: 100%;
 	height: 100%;
-	background-color: rgba(223, 200, 200, 0.8);
+	background-color: rgba(28, 28, 27, 1);
 	z-index: 1;
 }
 #testimonial-slider{
@@ -1254,7 +1254,7 @@ text-transform: uppercase;
 }
 
 .single-testimonial {
-    color: black;
+    color:white;
 	padding: 10px 25px;
 }
 .testimonial-content{
@@ -1471,6 +1471,7 @@ text-transform: uppercase;
 }
 .footer ul li{
 	line-height: 32px;
+	text-decoration: underline;
 }
 .footer ul li a{
 	font-weight: 600;
