preloader and word checkup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ fieldset {
     z-index: 99999;
 }
 
-.lds-dual-ring {
+/* .lds-dual-ring {
 	display: inline-block;
 	width: 64px;
 	height: 64px;
@@ -112,8 +112,39 @@ fieldset {
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
+
+svg {
+	display:block;
+	width:258px;
+	height:258px;
+	position:absolute;
+	left:50%;
+	top:50%;
+	transform:translate(-50%,-50%);
+  }
+  
+  .tree {
+	fill: #f05942;
+  }
+  
+  .circle-mask {
+	transform-origin: 50% 90%;
+	animation: scale 5s infinite ease-out;
+  }
+  
+  @keyframes scale {
+	0%, 100% {
+	  transform: scale(0.0);
+	}
+	7%, 90% {
+	  transform: scale(0.4);
+	}
+	50% {
+	  transform: scale(1);
+	}
+  }
 
 .no-padding { padding: 0 }
 /*END PRELOADER DESIGN*/
