--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ margin: auto;
 /*END SECTION TITLE DESIGN*/
 /*START SCROLL TO TOP*/
 .topcontrol {
-	background: #f05942 none repeat scroll 0 0;
+	background: #35a9e3 none repeat scroll 0 0;
 	border-radius: 30px;
 	bottom: 5px;
 	box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
@@ -274,11 +274,11 @@ margin: auto;
 #navigation.navbar-fixed #main-menu ul li a:focus,
 #main-menu ul li a:hover,
 #main-menu ul li a:focus{
-	color: #f05942;
+	color: #35a9e3;
 }
 
 .slicknav_nav_icon{
-	color: #f05942;
+	color: #35a9e3;
 	font-size: 24px;
 }
 #mobile_menu{
@@ -338,7 +338,7 @@ margin: auto;
 
 #navigation ul li:hover ul.sub-menu li a:hover{
 	color: #fff!important;
-	background: #f05942;
+	background: #35a9e3;
 	text-decoration: none;
 }
 
@@ -423,7 +423,7 @@ margin: auto;
 .home-slider .slick-next:before {
 	color: #fff;
 	font-size: 20px;
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	width: 55px;
 	height: 55px;
 	line-height: 50px;
@@ -482,7 +482,7 @@ width: 100%;
 .btn-home-bg:focus{
 	background:#fff;
 	border-color: #fff;
-	color:#f05942;
+	color:#35a9e3;
 	outline:0;
 }
 .home_parallax{height: 700px;position:relative;}
@@ -582,7 +582,10 @@ video { min-width: 100%; }
 .our_services{
 	padding-top:100px;
 	padding-bottom:100px;
+	
 }
+
+
 .service {
 	background: #fff none repeat scroll 0 0;
 	padding: 0 15px;
@@ -593,7 +596,7 @@ video { min-width: 100%; }
 	border-radius: 4px;
 }
 .service .icon {
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	border-radius: 50%;
 	color: #fff;
 	font-size: 29px;
@@ -634,7 +637,7 @@ video { min-width: 100%; }
 	margin-bottom: 40px;
 }
 .why_title span{
-	color: #f05942;
+	color: #35a9e3;
 	margin-bottom: 10px;
 	display: block;
 }
@@ -652,9 +655,9 @@ video { min-width: 100%; }
 
 .single-choose i{
 	background: transparent;
-	border: 1px solid #f05942;
+	border: 1px solid #35a9e3;
 	border-radius: 4px;
-	color: #f05942;
+	color: #35a9e3;
 	font-size: 29px;
 	height: 65px;
 	width: 65px;
@@ -707,7 +710,7 @@ video { min-width: 100%; }
 }
 .single-project-complete i {
 	font-size: 41px;
-	color: #f05942;
+	color: #35a9e3;
 	margin-bottom: 11px;
 	display: block;
 }
@@ -787,7 +790,7 @@ video { min-width: 100%; }
 }
 .pack_price{
 	font-weight: 700;
-	color: #f05942;
+	color: #35a9e3;
 }
 .single_package h5 {
 	font-size: 18px;
@@ -801,7 +804,7 @@ video { min-width: 100%; }
 }
 .single_package a{
 	padding: 10px 25px;
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	display: inline-block;
 	border-radius: 4px;
 	color: #fff;
@@ -817,7 +820,7 @@ video { min-width: 100%; }
 	margin-bottom: 12px;
 }
 .single_package .time_zone i{
-	color: #f05942;
+	color: #35a9e3;
 }
 .package-name {
 	font-size: 16px;
@@ -861,7 +864,7 @@ video { min-width: 100%; }
 .pack_image .btn-bg{
 	color: #fff;
 	font-size: 13px;
-	background: #f05942;
+	background: #35a9e3;
 	border-radius: 30px;
 	padding: 5px 20px;
 }
@@ -873,7 +876,7 @@ video { min-width: 100%; }
 .single-deal figure p a:hover,
 .single-deal figure p a:focus
 {
-	background: #e1330b;
+	background: #35a9e3;
 	color: #fff;
 }
 .single_package:hover .pack_image:before,
@@ -895,7 +898,7 @@ video { min-width: 100%; }
 	opacity: 1;
 }
 #package-slider .owl-dots .owl-dot.active span{
-	background-color: #f05942;
+	background-color: #35a9e3;
 }
 
 /*
@@ -942,7 +945,7 @@ video { min-width: 100%; }
 }
 
 .single-deal:hover figcaption{
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	color: #fff;
 }
 .single-deal:hover figcaption h4{
@@ -950,7 +953,7 @@ video { min-width: 100%; }
 }
 .single-deal:hover a{
 	background: #fff;
-	color: #f05942;
+	color: #35a9e3;
 }
 .single-deal figcaption .pull-left{
 	padding-right: 10px;
@@ -969,7 +972,7 @@ video { min-width: 100%; }
 	font-size: 15px;
 }
 .single-deal a{
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	color: #fff;
 	width: 40px;
 	height: 40px;
@@ -1000,7 +1003,7 @@ video { min-width: 100%; }
 }
 .tour_duration{
 	font-weight: 700;
-	color: #f05942;
+	color: #35a9e3;
 }
 .tour_slider .slick-prev, 
 .tour_slider .slick-next{
@@ -1048,7 +1051,7 @@ video { min-width: 100%; }
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	color: #f05942;
+	color: #35a9e3;
 	z-index: 99;
 	font-size: 12px;
 	background: #fff;
@@ -1063,14 +1066,14 @@ video { min-width: 100%; }
 	height: 50px;
 	line-height: 50px;
 	color: #fff;
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	border-radius: 50%;
 	text-align: center;
 }
 .gallery_enlarge_icon:hover,
 .gallery_enlarge_icon:focus
 {
-	background: linear-gradient(to right, #f45a43, #f25144, #f04846, #f05942,#eb3449);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	color: #fff;
 }
 .single_gallery img{
@@ -1079,11 +1082,11 @@ video { min-width: 100%; }
 	border: inherit!important;
 }
 .our_gallery .owl-controls .owl-buttons div{
-	background: #f05942;
+	background: #35a9e3;
 	width: 40px;
 	height: 40px;
 	line-height: 35px;
-	border: 1px solid #f05942;
+	border: 1px solid #35a9e3;
 	opacity: .8;
 	transition: .5s;
 	color: #fff;
@@ -1100,7 +1103,7 @@ video { min-width: 100%; }
 #gallery-slider .slick-dots button{
 	width: 12px;
 	height: 12px;
-	background: linear-gradient(to right, #f45a43, #f25144, #f04846, #f05942,#eb3449);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	border-radius: 50%;
 	box-shadow: 0 0 15px #ddd;
 }
@@ -1138,7 +1141,7 @@ img{
 	overflow: hidden;
 }
 .post_date{
-	background: #f05942;
+	background: #35a9e3;
 	color: #fff;
 	padding: 5px 20px; 
 	margin-bottom: 0px;
@@ -1166,7 +1169,7 @@ img{
 	margin-right: 10px;
 }
 .post-meta span i{
-	color: #f05942;
+	color: #35a9e3;
 }
 .blog-text h4{
 	line-height: 26px;
@@ -1180,7 +1183,7 @@ img{
 	transition: .5s;
 }
 .single_blog h4 a:hover{
-	color: #f05942;
+	color: #35a9e3;
 }
 .blog-photo{
 }
@@ -1207,7 +1210,7 @@ img{
   color: #333;
   height: 45px;
 }
-.search input:hover,.search input:focus{border: 1px solid #f05942;box-shadow: none;}
+.search input:hover,.search input:focus{border: 1px solid #35a9e3;box-shadow: none;}
 .search,
 .video_post,
 .categories { margin-bottom: 30px }
@@ -1225,7 +1228,7 @@ font-weight: 300;
 padding: 5px 0;
 text-transform: uppercase;
 }
-.categories ul li a:hover { color: #f05942 }
+.categories ul li a:hover { color: #35a9e3 }
 .categories ul li a i { margin-right: 10px }
 .video_post iframe {
     width: 100%;
@@ -1250,8 +1253,8 @@ text-transform: uppercase;
 }
 .btn-tag-bg:hover,
 .btn-tag-bg:focus {
-    background: #f05942;
-	border: 1px solid #f05942;
+    background: #35a9e3;
+	border: 1px solid #35a9e3;
     color: #fff;
 }
 /*END BLOG SIDEBAR*/
@@ -1308,7 +1311,7 @@ text-transform: uppercase;
 .testimonial .owl-item.active.center .single-testimonial{
 	padding: 30px 25px;
 	border-radius: 4px;
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	color: #fff;
 	border-radius: 4px;
 	box-shadow: 0 0 40px rgba(0, 0, 0, 0.07);
@@ -1341,7 +1344,7 @@ text-transform: uppercase;
 	border-radius: 50%;
 	background: #fff;
 	position: absolute;
-	color: #f05942;
+	color: #35a9e3;
 	font-size: 20px;
 }
 #testimonial-slider .owl-controls .owl-prev{
@@ -1403,7 +1406,7 @@ partner { text-align: center }
 	width: 45px;
 	height: 45px;
 	line-height: 45px;
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	color: #fff;
 	border-radius: 50%;
 	font-size: 16px;
@@ -1421,7 +1424,7 @@ partner { text-align: center }
 	margin-bottom: 15px;
 }
 .contact .form-control:focus {
-	border-color:  #f05942;
+	border-color:  #35a9e3;
 	box-shadow: none;
 	outline: 0 none;
 }
@@ -1446,8 +1449,8 @@ partner { text-align: center }
 
 
 #submitButton.btn-contact-bg {
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
-	border: 1px solid #f05942 !important;
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
+	border: 1px solid #35a9e3 !important;
 	color: #fff !important;
 	padding: 12px 27px !important;
 	text-transform: capitalize;
@@ -1461,8 +1464,8 @@ partner { text-align: center }
 }
 #submitButton:hover,
 #submitButton:focus {
-    background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
-    border: 1px solid #ed4f42!important;
+    background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
+    border: 1px solid #35a9e3!important;
     color: #fff;
 }
 
@@ -1522,7 +1525,7 @@ partner { text-align: center }
 }
 .footer a:hover,
 .footer a:focus{
-	color: #f05942;
+	color: #35a9e3;
 }
 /*
 * ----------------------------------------------------------------------------------------
@@ -1660,7 +1663,7 @@ partner { text-align: center }
 }
 .widget li a:hover,
 .widget li a:focus{
-	color: #f05942;
+	color: #35a9e3;
 }
 .widget li:last-child{
 	padding-bottom: 0px;
@@ -1692,7 +1695,7 @@ partner { text-align: center }
 	position: absolute;
 	right: 0;
 	top: 0;
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
 	color: #fff;
 	border: 1px solid transparent;
 	height: 50px;
@@ -1718,8 +1721,8 @@ partner { text-align: center }
 .widget_tag_cloud a:hover,
 .widget_tag_cloud a:focus{
 	color: #fff;
-	background: linear-gradient(to right, #f05942, #ed4f42, #ed4745, #eb4149,#ea3248);
-	border-color: #f05942;
+	background: linear-gradient(to right, #35a9e3, #35a9e3, #35a9e3, #35a9e3,#35a9e3);
+	border-color: #35a9e3;
 }
 .widget_instagram ul{
 	margin-left: -5px;
@@ -1862,7 +1865,7 @@ partner { text-align: center }
 	}
 	#navigation #mobile_menu li a:hover,
 	#navigation #mobile_menu li a:focus{
-		color: #f05942;
+		color: #35a9e3;
 	}
 	.slicknav_btn {
 		top: 9px;
