--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ svg {
 }
 
 .section-title span {
-	color: #f05942;
+	color: #35a9e3;
 	font-weight: 600;
 	margin-bottom: 10px;
 	display: block;
@@ -218,8 +218,9 @@ margin: auto;
 * ----------------------------------------------------------------------------------------
 */
 .site-logo{
-	width: 130px;
+	width: 220px;
 	height: auto;
+	margin: 5px 2px 2px 1px;
 }
 .bg-faded {
 	background-color: transparent;
@@ -251,6 +252,8 @@ margin: auto;
 }
 #main-menu{
 	margin-top: 17px;
+	font-size: 20px;
+	word-spacing: 5px;
 }
 #main-menu ul{
 	list-style-type: none;
@@ -261,7 +264,7 @@ margin: auto;
 	position: relative;
 }
 #main-menu ul li a{
-	color: #fff;
+	color: #171515;
 	font-weight: 600;
 	text-transform: capitalize;
 	letter-spacing: .3px;
@@ -582,12 +585,15 @@ video { min-width: 100%; }
 .our_services{
 	padding-top:100px;
 	padding-bottom:100px;
+	/* background-image: url(../img/bg/1.png); */
+	background: #e8ebec;
 	
 }
 
 
 .service {
-	background: #fff none repeat scroll 0 0;
+	
+	/* background: #fff none repeat scroll 0 0; */
 	padding: 0 15px;
 	margin-bottom:40px;
 	transition: all 0.4s ease 0s;
@@ -936,7 +942,7 @@ video { min-width: 100%; }
 	overflow: hidden;
 	padding: 15px 30px;
 	text-align: left;
-	background-color: #fff;
+	background-color: #e8ebec;
 	transition: .2s;
 }
 .single-dela .img-tex{
@@ -1378,6 +1384,9 @@ partner { text-align: center }
 	display: inline-block;
 	max-width: 100%;
 	border-radius: 5px;
+}
+.our_team{
+	background: #e8ebec;
 }
 /*
 * ----------------------------------------------------------------------------------------
